--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "devDependencies": {
     "@types/node": "^8.0.26",
     "mocha": "^3.5.0",
-    "pm2": "^2.6.1"
+    "pm2": "^2.6.1",
+    "typescript": "^2.5.2"
   },
   "peerDependencies": {
     "pm2": "^2.6.1"
